<resources>
    <string name="app_name">开易贴牌助手</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ky_assistant">开易产线助手</string>
    <string name="product_id">厂商ID</string>
    <string name="please_input">请输入</string>
    <string name="edit">修改</string>
    <string name="save">保存</string>
    <string name="please_input_product_id_tip">请输入厂商ID~</string>
    <string name="scan_code">扫码</string>
    <string name="three_c_code">3C认证码</string>
    <string name="device_type">设备型号</string>
    <string name="terminal_id">设备唯一码</string>
    <string name="entry">录入</string>
    <string name="scan_result">扫码结果</string>
    <string name="device_information">设备信息</string>
    <string name="imei_code">IMEI码</string>
    <string name="product_code">产品编码</string>
    <string name="product_date">生产日期</string>
    <string name="back_homepage">回到首页</string>
    <string name="next_page">下一页</string>
    <string name="scanning">继续扫码</string>
    <string name="previous_page">上一页</string>
    <string name="please_usb_tip">请链接USB，并且打开网络共享~</string>
    <string name="product_type">产品型号</string>
    <string name="please_input_product_type_tip">请输入产品类型~</string>
    <string name="please_save">请先保存~</string>
    <string name="double_click_exit">再按一次返回键退出程序</string>
    <string name="standard_machine">部标机</string>
    <string name="non_standard_machine">非部标</string>
    <string name="scan_results">扫描结果</string>
    <string name="rescan">请重新扫码</string>
    <string name="entry_success">录入成功</string>
    <string name="entry_fail">录入失败</string>
    <string name="device_not_responding">\n原因：设备无响应</string>
    <string name="code_error">\n原因：设备唯一码格式错误</string>
    <string name="settings">设置</string>
    <string name="plus_speed">脉冲系数</string>
    <string name="simulation_speed">模拟速度</string>
    <string name="_75208">75208</string>
</resources>
