<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomePageActivity">

    <TextView
        android:id="@+id/tv_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/font_333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_home_page"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_page" />

    <TextView
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:id="@+id/tv_standard_machine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:drawableLeft="@drawable/ic_check_black_24dp"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:gravity="center"
        android:text="@string/standard_machine"
        android:textColor="@color/font_333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:id="@+id/view_standard_machine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/tv_standard_machine" />

    <TextView
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:id="@+id/tv_non_standard_machine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:drawableLeft="@drawable/ic_check_box_black_24dp"
        android:gravity="center"
        android:text="@string/non_standard_machine"
        android:textColor="@color/font_333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/view_standard_machine" />

    <View
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/tv_non_standard_machine" />

</androidx.constraintlayout.widget.ConstraintLayout>