<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activity.DeviceCodeActivity">

    <ImageView
        android:id="@+id/iv_scan_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:src="@mipmap/arrow_left_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/scan_results"
        android:textColor="@color/font"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_scan_results"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_background"
        app:layout_constraintTop_toBottomOf="@+id/iv_scan_results" />

    <TextView
        android:id="@+id/tv_device_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_38"
        android:background="@drawable/scan_results_bg"
        android:gravity="center"
        android:paddingTop="@dimen/dp_13"
        android:paddingBottom="@dimen/dp_12"
        android:text="12345678911111123"
        android:maxLength="12"
        android:inputType="number"
        android:textColor="@color/font_333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/view_scan_results" />
    <TextView
        android:id="@+id/tv_entry_success"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/dp_16"
        android:background="@mipmap/entry_success_icon"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/solid_round"
        android:gravity="center"
        android:text="@string/scan_code"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_http_tips"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="录入成功"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_13"
        android:textColor="@color/font"
        app:layout_constraintTop_toBottomOf="@+id/tv_entry_success"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_rescan"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rescan"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_13"
        android:textColor="@color/color_reentry"
        app:layout_constraintTop_toBottomOf="@+id/tv_http_tips"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>